--- a/src/css/components/page-shell.css
+++ b/src/css/components/page-shell.css
@@ -257,7 +257,7 @@
 }
 .dir.page-shell-mobile__alert-notification[class][class].page-shell-mobile__alert-attr-notifcation[class][class]
   .page-shell-mobile__alert-icon[class][class] {
-  background-color: var(--fhi-qn-u);
+  background-color: var(--warning-color);
   border-radius: 50%;
 }
 .page-shell-mobile__alert-attr-notifcation[class][class] {
