--- a/src/css/root.css
+++ b/src/css/root.css
@@ -18,15 +18,12 @@
   --gray-200: #ebebeb;
   --gray-100: #f7f7f7;
   --white: #ffffff;
-  --k-va-tnc: #c13515;
-  --cnr-vp-o: #b32505;
-  --f-p-k-v-lb: #fff8f6;
-  --fhi-qn-u: #e07912;
-  --k-ff-my-a: #008a05;
-  --ldbkp-d: #428bff;
-  --ihf-tp-q: #ff385c;
-  --kd-lqtg: #92174d;
-  --d-u-w-o-m-k: #460479;
+  --danger-color: #c13515;
+  --light-danger-color: #fff8f6;
+  --warning-color: #e07912;
+  --success-color: #008a05;
+  --info-color: #428bff;
+  --primary-color: #ff385c;
   --dc-gy-f-v: linear-gradient(to right, #e61e4d 0%, #e31c5f 50%, #d70466 100%);
   --d-e-vybb: radial-gradient(
     circle at center,
@@ -120,15 +117,12 @@
   --gray-200: #ebebeb;
   --gray-100: #f7f7f7;
   --white: #ffffff;
-  --k-va-tnc: #c13515;
-  --cnr-vp-o: #b32505;
-  --f-p-k-v-lb: #fff8f6;
-  --fhi-qn-u: #e07912;
-  --k-ff-my-a: #008a05;
-  --ldbkp-d: #428bff;
-  --ihf-tp-q: #ff385c;
-  --kd-lqtg: #92174d;
-  --d-u-w-o-m-k: #460479;
+  --danger-color: #c13515;
+  --light-danger-color: #fff8f6;
+  --warning-color: #e07912;
+  --success-color: #008a05;
+  --info-color: #428bff;
+  --primary-color: #ff385c;
   --dc-gy-f-v: linear-gradient(to right, #e61e4d 0%, #e31c5f 50%, #d70466 100%);
   --d-e-vybb: radial-gradient(
     circle at center,
@@ -227,15 +221,12 @@
   --gray-200: #ebebeb;
   --gray-100: #f7f7f7;
   --white: #ffffff;
-  --k-va-tnc: #c13515;
-  --cnr-vp-o: #b32505;
-  --f-p-k-v-lb: #fff8f6;
-  --fhi-qn-u: #e07912;
-  --k-ff-my-a: #008a05;
-  --ldbkp-d: #428bff;
-  --ihf-tp-q: #ff385c;
-  --kd-lqtg: #92174d;
-  --d-u-w-o-m-k: #460479;
+  --danger-color: #c13515;
+  --light-danger-color: #fff8f6;
+  --warning-color: #e07912;
+  --success-color: #008a05;
+  --info-color: #428bff;
+  --primary-color: #ff385c;
   --dc-gy-f-v: linear-gradient(to right, #e61e4d 0%, #e31c5f 50%, #d70466 100%);
   --d-e-vybb: radial-gradient(
     circle at center,
@@ -337,15 +328,12 @@
     --gray-200: #ebebeb;
     --gray-100: #f7f7f7;
     --white: #ffffff;
-    --k-va-tnc: #c13515;
-    --cnr-vp-o: #b32505;
-    --f-p-k-v-lb: #fff8f6;
-    --fhi-qn-u: #e07912;
-    --k-ff-my-a: #008a05;
-    --ldbkp-d: #428bff;
-    --ihf-tp-q: #ff385c;
-    --kd-lqtg: #92174d;
-    --d-u-w-o-m-k: #460479;
+    --danger-color: #c13515;
+    --light-danger-color: #fff8f6;
+    --warning-color: #e07912;
+    --success-color: #008a05;
+    --info-color: #428bff;
+    --primary-color: #ff385c;
     --dc-gy-f-v: linear-gradient(
       to right,
       #e61e4d 0%,
