--- a/assets/css/global.css
+++ b/assets/css/global.css
@@ -2225,8 +2225,8 @@
   --success-color: #008a05;
   --info-color: #428bff;
   --primary-color: #ff385c;
-  --dc-gy-f-v: linear-gradient(to right, #e61e4d 0%, #e31c5f 50%, #d70466 100%);
-  --d-e-vybb: radial-gradient(
+  --gradient-alt-1: linear-gradient(to right, #e61e4d 0%, #e31c5f 50%, #d70466 100%);
+  --gradient-alt-2: radial-gradient(
     circle at center,
     #ff385c 0%,
     #e61e4d 27.5%,
@@ -2235,8 +2235,8 @@
     #bd1e59 75%,
     #bd1e59 100%
   );
-  --gj-z-dpd: linear-gradient(to right, #bd1e59 0%, #92174d 50%, #861453 100%);
-  --i-n-t-h-mj: radial-gradient(
+  --gradient-alt-3: linear-gradient(to right, #bd1e59 0%, #92174d 50%, #861453 100%);
+  --gradient-alt-4: radial-gradient(
     circle at center,
     #d70466 0%,
     #bd1e59 30%,
@@ -2245,8 +2245,8 @@
     #6c0d63 90%,
     #6c0d63 100%
   );
-  --iqds-nv: linear-gradient(to right, #59086e 0%, #460479 50%, #440589 100%);
-  --j-m-v-dtd: radial-gradient(
+  --gradient-alt-5: linear-gradient(to right, #59086e 0%, #460479 50%, #440589 100%);
+  --gradient-alt-6: radial-gradient(
     circle at center,
     #6c0d63 0%,
     #59086e 30%,
@@ -2324,8 +2324,8 @@
   --success-color: #008a05;
   --info-color: #428bff;
   --primary-color: #ff385c;
-  --dc-gy-f-v: linear-gradient(to right, #e61e4d 0%, #e31c5f 50%, #d70466 100%);
-  --d-e-vybb: radial-gradient(
+  --gradient-alt-1: linear-gradient(to right, #e61e4d 0%, #e31c5f 50%, #d70466 100%);
+  --gradient-alt-2: radial-gradient(
     circle at center,
     #ff385c 0%,
     #e61e4d 27.5%,
@@ -2334,8 +2334,8 @@
     #bd1e59 75%,
     #bd1e59 100%
   );
-  --gj-z-dpd: linear-gradient(to right, #bd1e59 0%, #92174d 50%, #861453 100%);
-  --i-n-t-h-mj: radial-gradient(
+  --gradient-alt-3: linear-gradient(to right, #bd1e59 0%, #92174d 50%, #861453 100%);
+  --gradient-alt-4: radial-gradient(
     circle at center,
     #d70466 0%,
     #bd1e59 30%,
@@ -2344,8 +2344,8 @@
     #6c0d63 90%,
     #6c0d63 100%
   );
-  --iqds-nv: linear-gradient(to right, #59086e 0%, #460479 50%, #440589 100%);
-  --j-m-v-dtd: radial-gradient(
+  --gradient-alt-5: linear-gradient(to right, #59086e 0%, #460479 50%, #440589 100%);
+  --gradient-alt-6: radial-gradient(
     circle at center,
     #6c0d63 0%,
     #59086e 30%,
@@ -2428,8 +2428,8 @@
   --success-color: #008a05;
   --info-color: #428bff;
   --primary-color: #ff385c;
-  --dc-gy-f-v: linear-gradient(to right, #e61e4d 0%, #e31c5f 50%, #d70466 100%);
-  --d-e-vybb: radial-gradient(
+  --gradient-alt-1: linear-gradient(to right, #e61e4d 0%, #e31c5f 50%, #d70466 100%);
+  --gradient-alt-2: radial-gradient(
     circle at center,
     #ff385c 0%,
     #e61e4d 27.5%,
@@ -2438,8 +2438,8 @@
     #bd1e59 75%,
     #bd1e59 100%
   );
-  --gj-z-dpd: linear-gradient(to right, #bd1e59 0%, #92174d 50%, #861453 100%);
-  --i-n-t-h-mj: radial-gradient(
+  --gradient-alt-3: linear-gradient(to right, #bd1e59 0%, #92174d 50%, #861453 100%);
+  --gradient-alt-4: radial-gradient(
     circle at center,
     #d70466 0%,
     #bd1e59 30%,
@@ -2448,8 +2448,8 @@
     #6c0d63 90%,
     #6c0d63 100%
   );
-  --iqds-nv: linear-gradient(to right, #59086e 0%, #460479 50%, #440589 100%);
-  --j-m-v-dtd: radial-gradient(
+  --gradient-alt-5: linear-gradient(to right, #59086e 0%, #460479 50%, #440589 100%);
+  --gradient-alt-6: radial-gradient(
     circle at center,
     #6c0d63 0%,
     #59086e 30%,
@@ -2535,13 +2535,13 @@
     --success-color: #008a05;
     --info-color: #428bff;
     --primary-color: #ff385c;
-    --dc-gy-f-v: linear-gradient(
+    --gradient-alt-1: linear-gradient(
       to right,
       #e61e4d 0%,
       #e31c5f 50%,
       #d70466 100%
     );
-    --d-e-vybb: radial-gradient(
+    --gradient-alt-2: radial-gradient(
       circle at center,
       #ff385c 0%,
       #e61e4d 27.5%,
@@ -2550,13 +2550,13 @@
       #bd1e59 75%,
       #bd1e59 100%
     );
-    --gj-z-dpd: linear-gradient(
+    --gradient-alt-3: linear-gradient(
       to right,
       #bd1e59 0%,
       #92174d 50%,
       #861453 100%
     );
-    --i-n-t-h-mj: radial-gradient(
+    --gradient-alt-4: radial-gradient(
       circle at center,
       #d70466 0%,
       #bd1e59 30%,
@@ -2565,8 +2565,8 @@
       #6c0d63 90%,
       #6c0d63 100%
     );
-    --iqds-nv: linear-gradient(to right, #59086e 0%, #460479 50%, #440589 100%);
-    --j-m-v-dtd: radial-gradient(
+    --gradient-alt-5: linear-gradient(to right, #59086e 0%, #460479 50%, #440589 100%);
+    --gradient-alt-6: radial-gradient(
       circle at center,
       #6c0d63 0%,
       #59086e 30%,
