--- a/src/css/root.css
+++ b/src/css/root.css
@@ -24,8 +24,8 @@
   --success-color: #008a05;
   --info-color: #428bff;
   --primary-color: #ff385c;
-  --dc-gy-f-v: linear-gradient(to right, #e61e4d 0%, #e31c5f 50%, #d70466 100%);
-  --d-e-vybb: radial-gradient(
+  --gradient-alt-1: linear-gradient(to right, #e61e4d 0%, #e31c5f 50%, #d70466 100%);
+  --gradient-alt-2: radial-gradient(
     circle at center,
     #ff385c 0%,
     #e61e4d 27.5%,
@@ -34,8 +34,8 @@
     #bd1e59 75%,
     #bd1e59 100%
   );
-  --gj-z-dpd: linear-gradient(to right, #bd1e59 0%, #92174d 50%, #861453 100%);
-  --i-n-t-h-mj: radial-gradient(
+  --gradient-alt-3: linear-gradient(to right, #bd1e59 0%, #92174d 50%, #861453 100%);
+  --gradient-alt-4: radial-gradient(
     circle at center,
     #d70466 0%,
     #bd1e59 30%,
@@ -44,8 +44,8 @@
     #6c0d63 90%,
     #6c0d63 100%
   );
-  --iqds-nv: linear-gradient(to right, #59086e 0%, #460479 50%, #440589 100%);
-  --j-m-v-dtd: radial-gradient(
+  --gradient-alt-5: linear-gradient(to right, #59086e 0%, #460479 50%, #440589 100%);
+  --gradient-alt-6: radial-gradient(
     circle at center,
     #6c0d63 0%,
     #59086e 30%,
@@ -123,8 +123,8 @@
   --success-color: #008a05;
   --info-color: #428bff;
   --primary-color: #ff385c;
-  --dc-gy-f-v: linear-gradient(to right, #e61e4d 0%, #e31c5f 50%, #d70466 100%);
-  --d-e-vybb: radial-gradient(
+  --gradient-alt-1: linear-gradient(to right, #e61e4d 0%, #e31c5f 50%, #d70466 100%);
+  --gradient-alt-2: radial-gradient(
     circle at center,
     #ff385c 0%,
     #e61e4d 27.5%,
@@ -133,8 +133,8 @@
     #bd1e59 75%,
     #bd1e59 100%
   );
-  --gj-z-dpd: linear-gradient(to right, #bd1e59 0%, #92174d 50%, #861453 100%);
-  --i-n-t-h-mj: radial-gradient(
+  --gradient-alt-3: linear-gradient(to right, #bd1e59 0%, #92174d 50%, #861453 100%);
+  --gradient-alt-4: radial-gradient(
     circle at center,
     #d70466 0%,
     #bd1e59 30%,
@@ -143,8 +143,8 @@
     #6c0d63 90%,
     #6c0d63 100%
   );
-  --iqds-nv: linear-gradient(to right, #59086e 0%, #460479 50%, #440589 100%);
-  --j-m-v-dtd: radial-gradient(
+  --gradient-alt-5: linear-gradient(to right, #59086e 0%, #460479 50%, #440589 100%);
+  --gradient-alt-6: radial-gradient(
     circle at center,
     #6c0d63 0%,
     #59086e 30%,
@@ -227,8 +227,8 @@
   --success-color: #008a05;
   --info-color: #428bff;
   --primary-color: #ff385c;
-  --dc-gy-f-v: linear-gradient(to right, #e61e4d 0%, #e31c5f 50%, #d70466 100%);
-  --d-e-vybb: radial-gradient(
+  --gradient-alt-1: linear-gradient(to right, #e61e4d 0%, #e31c5f 50%, #d70466 100%);
+  --gradient-alt-2: radial-gradient(
     circle at center,
     #ff385c 0%,
     #e61e4d 27.5%,
@@ -237,8 +237,8 @@
     #bd1e59 75%,
     #bd1e59 100%
   );
-  --gj-z-dpd: linear-gradient(to right, #bd1e59 0%, #92174d 50%, #861453 100%);
-  --i-n-t-h-mj: radial-gradient(
+  --gradient-alt-3: linear-gradient(to right, #bd1e59 0%, #92174d 50%, #861453 100%);
+  --gradient-alt-4: radial-gradient(
     circle at center,
     #d70466 0%,
     #bd1e59 30%,
@@ -247,8 +247,8 @@
     #6c0d63 90%,
     #6c0d63 100%
   );
-  --iqds-nv: linear-gradient(to right, #59086e 0%, #460479 50%, #440589 100%);
-  --j-m-v-dtd: radial-gradient(
+  --gradient-alt-5: linear-gradient(to right, #59086e 0%, #460479 50%, #440589 100%);
+  --gradient-alt-6: radial-gradient(
     circle at center,
     #6c0d63 0%,
     #59086e 30%,
@@ -334,13 +334,13 @@
     --success-color: #008a05;
     --info-color: #428bff;
     --primary-color: #ff385c;
-    --dc-gy-f-v: linear-gradient(
+    --gradient-alt-1: linear-gradient(
       to right,
       #e61e4d 0%,
       #e31c5f 50%,
       #d70466 100%
     );
-    --d-e-vybb: radial-gradient(
+    --gradient-alt-2: radial-gradient(
       circle at center,
       #ff385c 0%,
       #e61e4d 27.5%,
@@ -349,13 +349,13 @@
       #bd1e59 75%,
       #bd1e59 100%
     );
-    --gj-z-dpd: linear-gradient(
+    --gradient-alt-3: linear-gradient(
       to right,
       #bd1e59 0%,
       #92174d 50%,
       #861453 100%
     );
-    --i-n-t-h-mj: radial-gradient(
+    --gradient-alt-4: radial-gradient(
       circle at center,
       #d70466 0%,
       #bd1e59 30%,
@@ -364,8 +364,8 @@
       #6c0d63 90%,
       #6c0d63 100%
     );
-    --iqds-nv: linear-gradient(to right, #59086e 0%, #460479 50%, #440589 100%);
-    --j-m-v-dtd: radial-gradient(
+    --gradient-alt-5: linear-gradient(to right, #59086e 0%, #460479 50%, #440589 100%);
+    --gradient-alt-6: radial-gradient(
       circle at center,
       #6c0d63 0%,
       #59086e 30%,
