--- a/src/css/components/page-shell.css
+++ b/src/css/components/page-shell.css
@@ -251,16 +251,16 @@
     display: none;
   }
 }
-.page-shell-mobile__alert-notification[class][class].page-shell-mobile__alert-attr-notifcation[class][class]
+.page-shell-mobile__alert-notification[class][class].i144hzgs[class][class]
   .page-shell-mobile__alert-icon[class][class] {
   color: var(--white);
 }
-.dir.page-shell-mobile__alert-notification[class][class].page-shell-mobile__alert-attr-notifcation[class][class]
+.dir.page-shell-mobile__alert-notification[class][class].i144hzgs[class][class]
   .page-shell-mobile__alert-icon[class][class] {
   background-color: var(--warning-color);
   border-radius: 50%;
 }
-.page-shell-mobile__alert-attr-notifcation[class][class] {
+.i144hzgs[class][class] {
   display: -webkit-inline-box;
   display: -webkit-inline-flex;
   display: -ms-inline-flexbox;
@@ -268,7 +268,7 @@
   contain: layout;
   width: 100%;
 }
-.page-shell-mobile__alert-attr-notifcation[class][class]
+.i144hzgs[class][class]
   .page-shell-mobile__alert-icon[class][class] {
   width: 44px;
   height: 44px;
@@ -286,29 +286,29 @@
   justify-content: center;
   color: var(--gray-900);
 }
-.page-shell-mobile__alert-attr-notifcation[class][class]
+.i144hzgs[class][class]
   .page-shell-mobile__alert-header-button[class][class] {
   display: -webkit-inline-box;
   display: -webkit-inline-flex;
   display: -ms-inline-flexbox;
   display: inline-flex;
 }
-.page-shell-mobile__alert-attr-notifcation[class][class] {
+.i144hzgs[class][class] {
   display: inline-flex;
   contain: layout;
   width: 100%;
 }
-.dir.page-shell-mobile__alert-attr-notifcation[class][class] {
+.dir.i144hzgs[class][class] {
   border: 1px solid var(--gray-300);
   background-color: var(--white);
   border-radius: 12px;
   padding: 16px;
 }
-.dir-ltr.page-shell-mobile__alert-attr-notifcation[class][class]
+.dir-ltr.i144hzgs[class][class]
   .page-shell-mobile__alert-icon-wrapper[class][class] {
   margin-right: 12px;
 }
-.page-shell-mobile__alert-attr-notifcation[class][class]
+.i144hzgs[class][class]
   .page-shell-mobile__alert-icon[class][class] {
   width: 44px;
   height: 44px;
@@ -317,36 +317,36 @@
   justify-content: center;
   color: var(--gray-900);
 }
-.page-shell-mobile__alert-attr-notifcation[class][class]
+.i144hzgs[class][class]
   .page-shell-mobile__alert-header-text[class][class] {
   color: var(--gray-900);
   font-weight: var(--font-weight-bold);
   font-size: var(--font-size-sm);
   line-height: var(--line-height-sm);
 }
-.dir.page-shell-mobile__alert-attr-notifcation[class][class]
+.dir.i144hzgs[class][class]
   .page-shell-mobile__alert-header-text[class][class] {
   margin-bottom: 4px;
 }
-.page-shell-mobile__alert-attr-notifcation[class][class]
+.i144hzgs[class][class]
   .page-shell-mobile__alert-header-desc[class][class] {
   color: var(--gray-900);
   font-size: var(--font-size-sm);
   line-height: var(--line-height-sm);
 }
-.page-shell-mobile__alert-attr-notifcation[class][class]
+.i144hzgs[class][class]
   .page-shell-mobile__alert-header-desc-color[class][class] {
   color: var(--gray-500);
 }
-.page-shell-mobile__alert-attr-notifcation[class][class]
+.i144hzgs[class][class]
   .page-shell-mobile__alert-header-button[class][class] {
   display: inline-flex;
 }
-.dir.page-shell-mobile__alert-attr-notifcation[class][class]
+.dir.i144hzgs[class][class]
   .page-shell-mobile__alert-header-button[class][class] {
   margin-top: 12px;
 }
-.dir-ltr.page-shell-mobile__alert-attr-notifcation[class][class]
+.dir-ltr.i144hzgs[class][class]
   .ady5cna[class][class] {
   margin-right: 20px;
 }
