--- a/src/css/pages.css
+++ b/src/css/pages.css
@@ -35217,11 +35217,11 @@ tr.hide {
     overflow: clip;
   }
 }
-.e1rue1xl[class][class].page-shell-mobile__alert-attr-notifcation[class][class]
+.e1rue1xl[class][class].i144hzgs[class][class]
   .page-shell-mobile__alert-icon[class][class] {
   color: var(--white);
 }
-.dir.e1rue1xl[class][class].page-shell-mobile__alert-attr-notifcation[class][class]
+.dir.e1rue1xl[class][class].i144hzgs[class][class]
   .page-shell-mobile__alert-icon[class][class] {
   background-color: var(--danger-color);
   border-radius: 50%;
