fix payment desktop

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -55920,4 +55920,105 @@ body {
   border-radius: 50% !important;
   background: rgb(255, 255, 255) !important;
   border: 1px solid rgb(221, 221, 221) !important;
+}._wz0818y {
+  display: block !important;
+  width: 100% !important;
+  background: rgb(255, 255, 255) !important;
+  margin: 0px !important;
+  padding: 0px !important;
+  text-align: left !important;
+  outline: none !important;
+  transition: border 150ms ease-out 0s !important;
+  border: 1px solid rgb(176, 176, 176) !important;
+  border-radius: 8px !important;
+}._qcdbez {
+  pointer-events: none !important;
+  position: absolute !important;
+  top: 0px !important;
+  right: 20px !important;
+  height: 100% !important;
+}._wn4bip {
+  display: table-cell !important;
+  vertical-align: middle !important;
+  transition-property: -ms-transform, -webkit-transform, transform !important;
+  transition-duration: 250ms !important;
+  transition-timing-function: ease-in-out !important;
+}._4l12l8 {
+  margin-top: 8px !important;
+}._64pbdv {
+  margin-top: 16px !important;
+}._1jn0ze9 {
+  position: absolute !important;
+  top: 18px !important;
+  left: 12px !important;
+  right: 12px !important;
+  margin: 0px !important;
+  padding: 0px !important;
+  color: rgb(113, 113, 113) !important;
+  pointer-events: none !important;
+  transform-origin: 0% 0% !important;
+  font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif !important;
+  font-size: 16px !important;
+  line-height: 20px !important;
+  font-weight: 400 !important;
+  transition: -ms-transform 0.15s cubic-bezier(0.455, 0.03, 0.515, 0.955) 0s, -webkit-transform 0.15s cubic-bezier(0.455, 0.03, 0.515, 0.955) 0s, transform 0.15s cubic-bezier(0.455, 0.03, 0.515, 0.955) 0s !important;
+}
+
+._js9i23 {
+  display: flex !important;
+  opacity: 0 !important;
+}._c5rhl5 {
+  width: 100% !important;
+  border: none !important;
+  outline: none !important;
+  padding: 0px !important;
+  margin: 26px 12px 6px !important;
+  min-height: 1px !important;
+  color: inherit !important;
+  background-color: transparent !important;
+  font-family: inherit !important;
+  font-size: inherit !important;
+  font-weight: inherit !important;
+  line-height: inherit !important;
+  appearance: none !important;
+}._148dgdpk:disabled {
+  cursor: not-allowed !important;
+  opacity: 1 !important;
+  border: none !important;
+  background: var(--gray-300) !important;
+  color: var(--white) !important;
+}
+._148dgdpk {
+  cursor: pointer !important;
+  display: inline-block !important;
+  margin: 0px !important;
+  position: relative !important;
+  text-align: center !important;
+  text-decoration: none !important;
+  touch-action: manipulation !important;
+  font-family: var(--e-ls-qkw) !important;
+  font-size: var(--iw-ehf-f) !important;
+  line-height: var(---s-l-myu) !important;
+  font-weight: var(--jx-zk-pv) !important;
+  border-radius: var(--go-h-jh-l) !important;
+  outline: none !important;
+  padding: 14px 24px !important;
+  transition: box-shadow 0.2s ease 0s, -ms-transform 0.1s ease 0s, -webkit-transform 0.1s ease 0s, transform 0.1s ease 0s !important;
+  -webkit-tap-highlight-color: transparent !important;
+  border: none !important;
+  background: var(--f-k-smk-x) !important;
+  color: var(--white) !important;
+  contain: paint !important;
+  width: 100% !important;
+}._1qfgcw8 {
+  font-size: 22px !important;
+  line-height: 26px !important;
+  margin-bottom: 24px !important;
+  font-weight: 600 !important;
+}@media (min-width: 744px)
+{
+  ._1qfgcw8 {
+    font-size: 22px !important;
+    line-height: 26px !important;
+  }
 }
