--- a/src/css/components/header-filter.css
+++ b/src/css/components/header-filter.css
@@ -284,16 +284,18 @@
   align-items: center;
   justify-content: center;
 }
+/* clean-css ignore:start */
 .dir.header-filter__controls-btn[class][class] {
   border-radius: 50%;
   cursor: pointer;
-  border: 1px solid;
+  border: 1px solid rgb(0 0 0 / 0.3);
   margin: 0;
   padding: 0;
   background-clip: padding-box;
   background-color: var(--white);
   transition: box-shadow 0.2s;
 }
+/* clean-css ignore:end */
 .dir.header-filter__controls-btn[class][class]:focus-visible {
   transition: box-shadow 0.2s;
   box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.5), 0 0 0 5px rgba(255, 255, 255, 0.7);
@@ -305,11 +307,13 @@
 .dir.header-filter__controls-btn[class][class]:disabled {
   cursor: not-allowed;
 }
+/* clean-css ignore:start */
 @media (-webkit-max-device-pixel-ratio: 2) {
   .dir.header-filter__controls-btn[class][class] {
-    border: 0.5px solid;
+    border: 0.5px solid rgb(0 0 0 / 0.3);
   }
 }
+/* clean-css ignore:end */
 .header-filter__controls-btn[class][class]:focus-visible {
   outline: 0;
 }
